# YOLO-Buffet

./: .env.example  .gitignore  MVP_All_Phases.md  README.md  buffet_MVP.docx  pyproject.toml
.cursor/plans/: buffet_mvp_phases_b8d9ccb4.plan.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: deps.py  main.py  schemas.py
app/routers/: cameras.py  events.py  health.py  sites.py
scripts/: click_coords.py  evaluate.py  pixels_to_zone_json.py  seed_demo.py  smoke_load.py  verify_batch_samples.py
shared/: __init__.py  config.py  metrics_eval.py
shared/db/: __init__.py  session.py
shared/models/: __init__.py  tables.py
tests/: test_api_health.py  test_batch_sources.py  test_detection_roi.py  test_evaluate_script.py  test_events_fsm.py  test_geometry.py  test_ingest.py  test_preview.py  test_tracking_smoke.py
video_samples/: README.md
worker/: __init__.py  __main__.py  batch_sources.py  classify.py  db_ops.py  detection.py  events.py  geometry.py  ingest.py  main.py  preview.py
